welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:5: error: not found: value nbBscuits
    nbBscuits = nbBiscuits + 1}
    ^Poucet:9: error: Boolean does not take parameters
     else (nbBiscuits <= 2){
                           ^