welcome.lessons.welcome.loopdowhile.Poucet1.scala.code
do {
  var nbBiscuits: Int=0
  for (n <- 1 to 5){
    avance();
    nbBscuits = nbBiscuits + 1}
     if (nbBiscuits >= 3){
       gauche();}
  
     else (nbBiscuits <= 2){
       droite()} ; }
while (!sortieTrouvee)
avance();